--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         />
       </div>
       <div class="search-area">
-        <div class="search">
+        
+          <div class="search">
           <div class="search-img">
             <span>
               <svg
@@ -67,6 +68,11 @@
                 maxlength="2048"
                 autofocus="true"
               />
+              <div class="voice">
+                <a class="vhref" style="width: 33px; height: 33px;" href="#">
+                  <img class="vhref" src="assets/voicelogo.png" alt="ses">
+                </a>
+              </div>
             </div>
           </div>
         </div>
